--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -157,25 +157,25 @@ jobs:
       # Create Shared - START #
       ##############################
       # Always run
-      - name: Terraform Format
+      - name: Terraform Format - terraform_shared
         id: fmt_shared
         run: |
           terraform fmt -check
         working-directory: ./terraform/terraform_shared
 
       # Init using workspace from Terraform Cloud
-      - name: Terraform Init
+      - name: Terraform Init - terraform_shared
         id: init_shared
         run: terraform init
         working-directory: ./terraform/terraform_shared
 
-      - name: Terraform Validate
+      - name: Terraform Validate - terraform_shared
         id: validate_shared
         run: terraform validate -no-color
         working-directory: ./terraform/terraform_shared
 
       # run conditionally
-      - name: Terraform Apply
+      - name: Terraform Apply - terraform_shared
         id: apply_shared
         run: terraform apply -auto-approve
         continue-on-error: false
@@ -189,37 +189,37 @@ jobs:
       # Create SNS - START #
       ##############################
       # Always run format / validate and output commands but run apply only if files have changed
-      - name: Terraform Format
+      - name: Terraform Format - terraform_sns
         id: fmt_sns
         run: |
           terraform fmt -check
         working-directory: ./terraform/terraform_sns
 
       # Init using workspace from Terraform Cloud
-      - name: Terraform Init
+      - name: Terraform Init - terraform_sns
         id: init_sns
         run: terraform init
         working-directory: ./terraform/terraform_sns
 
-      - name: Terraform Validate
+      - name: Terraform Validate - terraform_sns
         id: validate_sns
         run: terraform validate -no-color
         working-directory: ./terraform/terraform_sns
 
       # run conditionally
-      - name: Terraform Apply
+      - name: Terraform Apply - terraform_sns
         id: apply_sns
         if: ${{ env.tf_dir_changed == 'true' || env.terraform_apply_override == 'true' }}
         run: terraform apply -auto-approve
         continue-on-error: false
         working-directory: ./terraform/terraform_sns
 
-      - name: Set var from TF Output
+      - name: Set var from TF Output - terraform_graphql
         id: setVarSNS
         run: |
           snst=$(terraform output topic_arn)
           echo "REACT_APP_SNS_ARN=$snst" >> $GITHUB_ENV
-        working-directory: ./terraform/terraform_graphql
+        working-directory: ./terraform/terraform_sns
       ##############################
       # Create SNS - END #
       ##############################
@@ -228,25 +228,25 @@ jobs:
       # Create DynamoDB - START #
       ##############################
       # Always run format / validate and output commands but run apply only if files have changed
-      - name: Terraform Format
+      - name: Terraform Format - terraform_dynamoDB
         id: fmt_ddb
         run: |
           terraform fmt -check
         working-directory: ./terraform/terraform_dynamoDB
 
       # Init using workspace from Terraform Cloud
-      - name: Terraform Init
+      - name: Terraform Init - terraform_dynamoDB
         id: init_ddb
         run: terraform init
         working-directory: ./terraform/terraform_dynamoDB
 
-      - name: Terraform Validate
+      - name: Terraform Validate - terraform_dynamoDB
         id: validate_ddb
         run: terraform validate -no-color
         working-directory: ./terraform/terraform_dynamoDB
 
       # run conditionally
-      - name: Terraform Apply
+      - name: Terraform Apply - terraform_dynamoDB
         id: apply_ddb
         if: ${{ env.tf_dir_changed == 'true' || env.terraform_apply_override == 'true' }}
         run: terraform apply -auto-approve
