--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@emotion/react": "^11.5.0",
+    "@okta/okta-auth-js": "^5.8.0",
+    "@okta/okta-react": "^6.3.0",
+    "@okta/okta-signin-widget": "^5.13.0",
     "@rebass/forms": "^4.0.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
