--- a/terraform/terraform_graphql/function/src/package.json
+++ b/terraform/terraform_graphql/function/src/package.json
@@ -18,6 +18,7 @@
     "apollo-server-lambda": "^3.3.0",
     "aws-sdk": "^2.1016.0",
     "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
     "graphql": "^15.6.0",
     "lodash": "^4.17.21",
