--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -381,10 +381,10 @@ jobs:
       # set up to build React project
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
-        working-directory: ./ui
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
+          cache-dependency-path: ui/yarn.lock
 
       # build React project
       - name: React Yarn Install
