--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -381,6 +381,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
+          start: yarn start
           spec: cypress/integration/ui/blog_spec.js
           working-directory: ./ui
 
