--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -382,6 +382,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           start: yarn start
+          wait-on: 'http://localhost:3001'
           spec: cypress/integration/ui/blog_spec.js
           working-directory: ./ui
 
