--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -54,7 +54,7 @@ jobs:
       localDynamoTestContainer:
         image: amazon/dynamodb-local:1.17.0
         ports: 8000:8000
-        volumes: `pwd`/dynamodb:/home/dynamodblocal/data
+        volumes: $GITHUB_WORKSPACE/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data
         options: -w /home/dynamodblocal
 
 
