--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -56,7 +56,8 @@ jobs:
         image: amazon/dynamodb-local:1.17.0
         ports:
           - 8000:8000
-        volumes: "${GITHUB_WORKSPACE}/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data"
+        volumes:
+          - "${GITHUB_WORKSPACE}/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data"
         options: -w /home/dynamodblocal
 
 
