--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -56,7 +56,7 @@ jobs:
         image: amazon/dynamodb-local:1.17.0
         ports:
           - 8000:8000
-        options: -v ${GITHUB_WORKSPACE}/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data  -w /home/dynamodblocal
+        options: -v /home/runner/work/blog-site/blog-site/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data  -w /home/dynamodblocal
 
 
     strategy:
