--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -51,12 +51,12 @@ jobs:
       # Sets port for React when run for tests - END
 
     # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#jobsjob_idservices
-    services:
-      localDynamoTestContainer:
-        image: amazon/dynamodb-local:1.17.0
-        ports:
-          - 8000:8000
-        options: -v /home/runner/work/blog-site/blog-site/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data  -w /home/dynamodblocal
+#    services:
+#      localDynamoTestContainer:
+#        image: amazon/dynamodb-local:1.17.0
+#        ports:
+#          - 8000:8000
+#        options: -v /home/runner/work/blog-site/blog-site/terraform/terraform_graphql/dynamodb:/home/dynamodblocal/data  -w /home/dynamodblocal
 
 
     strategy:
@@ -173,6 +173,32 @@ jobs:
       ##############################
       # CHANGED DIRECTORIES - END #
       ##############################
+
+      - run: |
+          docker network create --driver bridge graphql-net
+
+          docker run -p 8000:8000 \
+            -w /home/dynamodblocal \
+            -v /function/dynamodb:/home/dynamodblocal/data \
+            --name localDynamoTestContainer \
+            --network graphql-net \
+            -d  amazon/dynamodb-local:1.17.0
+
+          docker run -p 4000:4000 \
+          -v /function/src:/src \
+          -w /src \
+          -v $HOME/.aws/credentials:/root/.aws/credentials \
+          --name localGraphQLTestContainer \
+          --env CYPRESS_GRAPHQL=true \
+          --env GRAPHQL_PORT=4000 \
+          --env JWT_OVERRIDE=true \
+          --env DYNAMO_HOST=localDynamoTestContainer \
+          --network graphql-net \
+          -d node:16 node index.js
+
+        working-directory: ./terraform/terraform_graphql
+
+
 
       # Installs specified version of terraform - I like to pin versions - would make sense to use a variable at org level
       - uses: hashicorp/setup-terraform@v1
