--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -432,6 +432,8 @@ jobs:
         with:
           wait-on: 'http://localhost:3001, http://localhost:4000,'
           config-file: ui/cypress.json
+          project: ui
+
 
 
       ##############################
