--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -430,6 +430,10 @@ jobs:
       - run: node index.js &
         working-directory: ./terraform/terraform_graphql/function/src
 
+      - run: |
+          sleep 20 &&
+              curl http://localhost:4000
+
       # run tests
       # https://docs.cypress.io/guides/continuous-integration/github-actions
       # https://github.com/marketplace/actions/cypress-io
