--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -432,7 +432,8 @@ jobs:
 
       - run: |
           sleep 20 &&
-              curl http://localhost:4000
+              curl --request POST --header 'content-type: application/json' --url http://localhost:4000/graphql --data '{"query":"query Query {\n  hello\n}"}'
+
 
       # run tests
       # https://docs.cypress.io/guides/continuous-integration/github-actions
