--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -430,11 +430,20 @@ jobs:
       - run: node index.js &
         working-directory: ./terraform/terraform_graphql/function/src
 
-      - run: |
+      - name: Test gql
+        run: |
           sleep 20 &&
               curl --request POST --header 'content-type: application/json' --url http://localhost:4000/graphql --data '{"query":"query Query {\n  hello\n}"}'
 
+      - name: Test 3000
+        run: |
+          sleep 20 &&
+          curl http://localhost:3000
 
+      - name: Test 3001
+        run: |
+          sleep 20 &&
+          curl http://localhost:3001
       # run tests
       # https://docs.cypress.io/guides/continuous-integration/github-actions
       # https://github.com/marketplace/actions/cypress-io
