--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -435,10 +435,10 @@ jobs:
           sleep 20 &&
               curl --request POST --header 'content-type: application/json' --url http://localhost:4000/graphql --data '{"query":"query Query {\n  hello\n}"}'
 
-      - name: Test 3000
-        run: |
-          sleep 20 &&
-          curl http://localhost:3000
+#      - name: Test 3000
+#        run: |
+#          sleep 20 &&
+#          curl http://localhost:3000
 
       - name: Test 3001
         run: |
