--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -24,7 +24,7 @@ jobs:
       TF_VAR_base_domain: ${{ secrets.BASE_DOMAIN }}
       # override variables for conditionally run steps in this workflow file - START
       react_build_override: 'true'
-      terraform_apply_override: 'false'
+      terraform_apply_override: 'true'
       s3_deploy_override: 'true'
       # override variables for conditionally run steps in this workflow file - END
       # sample users for testing authentication and groups with Cypress - START
