--- a/ui/package.json
+++ b/ui/package.json
@@ -27,8 +27,9 @@
   },
   "devDependencies": {
     "audit-ci": "^5.1.2",
-    "react-scripts": "4.0.3",
-    "cypress": "^9.0.0"
+    "cypress": "^9.0.0",
+    "prettier": "^2.4.1",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
