--- a/ui/package.json
+++ b/ui/package.json
@@ -38,7 +38,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "start:nodemon": "nodemon --watch src --watch public -e  js,mjs,json,mdx"
   },
   "eslintConfig": {
     "extends": [
