--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-social-icons": "^5.6.1",
