--- a/ui/package.json
+++ b/ui/package.json
@@ -31,7 +31,8 @@
     "audit-ci": "^5.1.2",
     "cypress": "^9.0.0",
     "prettier": "^2.4.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-snap": "^1.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +41,8 @@
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "start:nodemon": "nodemon --watch src --watch public -e  js,mjs,json,mdx"
+    "start:nodemon": "nodemon --watch src --watch public -e  js,mjs,json,mdx",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
